# grafana_api

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  meta.yaml  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.chglog/: CHANGELOG.tpl.md  RELEASE_NOTES-config.yml  RELEASE_NOTES.tpl.md  config.yml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  main.workflow
.github/ISSUE_TEMPLATE/: bug_report.md  incorrect-response.md  missing-grafana-api-endpoint.md
.github/workflows/: codeql-analysis.yml  publish.yml  release.yml  test.yml
conda/: conda_setup.py  meta.yaml
docs/: index.html
grafana/: docker-compose.yaml
grafana_api/: __init__.py  grafana_api.py  grafana_face.py  grafana_http.py
grafana_api/api/: __init__.py  admin.py  alerting.py  annotations.py  base.py  dashboard.py  datasource.py  folder.py  health.py  notifications.py  organisation.py  organization.py  search.py  snapshots.py  team.py  user.py
test/: test_grafana.py
test/api/: test_admin.py  test_alerting.py  test_annotations.py  test_dashboard.py  test_folder.py  test_notifications.py  test_organization.py  test_search.py  test_snapshot.py  test_team.py
test/mock/api/: datasources.json  org.json  search.json  user.json
test/mock/api/admin/: settings.json  stats.json
test/mock/api/dashboards/: db.json  home.json  tags.json
test/mock/api/frontend/: settings.json
test/mock/api/login/: ping.json
test/mock/api/org/: users.json
test/mock/api/snapshots/: my_key.json
test/mock/api/snapshots-delete/: delete_key.json
test/mock/api/user/: orgs.json
test/mock/delete/api/admin/users/: user.json
test/mock/delete/api/dashboards/: db.json
test/mock/post/api/: snapshots.json
test/mock/post/api/admin/: pause-all-alerts.json  users.json
test/mock/post/api/dashboards/: db.json
test/mock/put/api/admin/users/: password.json  permissions.json
