[tool.poetry]
name = "grafana_api"
version = "1.0.2"
description = "Yet another Python library for Grafana API"
authors = ["Andrew Prokhorenkov <andrew.prokhorenkov@gmail.com>"]
license = "MIT"
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Topic :: Internet",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: OS Independent",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8"
    ]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
unittest-xml-reporting = "^3.0.2"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
