[metadata]
name = grafana_api
friendly_name = Python Grafana API
description = Yet another Python library for Grafana API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Andrew Prokhorenkov
author_email = andrew.prokhorenkov@gmail.com
copyright = Copyright 2017-2020 Andrew Prokhorenkov <andrew.prokhorenkov@gmail.com>
url = https://github.com/m0nhawk/grafana_api/
project_urls =
    Source = https://github.com/m0nhawk/grafana_api/
    Tracker = https://github.com/m0nhawk/grafana_api/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = grafana api

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False
setup_requires =
    setuptools_scm>=1.15.0

install_requires =
    requests>=2.23.0

[options.extras_require]
test =
    codecov>=2.1.0
    coverage>=5.2.0
    unittest-xml-reporting>=3.0.0
    requests-mock>=1.8.0

[options.packages.find]
where = .
exclude = test

[bdist_wheel]
universal = true

[tool.setuptools_scm]

# [coverage:run]
# branch = True
# omit =
#     docs/*
#     setup.py
#     tests/*
#     .vulture/*
