[metadata]
name = grafana_api
friendly_name = Python Grafana API
description = Yet another Python library for Grafana API
long_description = file: README.md
long_description_content_type = text/markdown
copyright = Copyright 2017-2020 Andrew Prokhorenkov <andrew.prokhorenkov@gmail.com>
keywords = grafana api

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False
setup_requires =
    setuptools_scm>=4.0

install_requires =
    requests>=2.23.0

[options.extras_require]
test =
    codecov>=2.1.0
    coverage>=5.2.0
    unittest-xml-reporting>=3.0.0
    requests-mock>=1.8.0

[options.packages.find]
where = .
exclude = test

[bdist_wheel]
universal = true

[tool.setuptools_scm]
local_scheme = no-local-version
version_scheme = python-simplified-semver
write_to = grafana_api/version.py
